--- a/Front-End Specilization/4_HTML_CSS_Deep/Module_2/10_Css_transform_transitions/3_Box_with_Color.html
+++ b/Front-End Specilization/4_HTML_CSS_Deep/Module_2/10_Css_transform_transitions/3_Box_with_Color.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Animated Box</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="3_box_with_color.css">
 </head>
 <body>
   <div class="box">Box</div>
